# sapu-sapu

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html
.github/: FUNDING.yml
assets/: app.js  styles.css
docs/: spec.md
scripts/: make_banner.py  make_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cleaner.rs  main.rs
ui/: app.js  index.html  styles.css
