[package]
name = "sapu"
version = "0.2.0"
description = "Sapu Sapu - neo-brutalist disk cleaner for Windows"
authors = ["Dharmawan"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
